@@ -16,11 +16,13 @@ CFLAGS = -O3 -traceback
 #CFLAGS = -O3 -static -traceback
 #CFLAGS = -O3 -static -traceback -Wcheck -Wall -wd981 
 CFLAGS = -O0 -traceback -Wcheck -Wall -wd981 
-#CFLAGS = -g -O0  -traceback 
+#CFLAGS = -g -O0  -traceback  -Wcheck -Wall -wd981 
 
 
 
-DEF_MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o 
+
+
+DEF_MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_lal.o mcmc_3rdparty.o 
 DEF_CFLAGS = -I/usr/include -I./include -I ~/bin/include   -I ~/local/programs/lscsoft/lal/include/ -I ~/local/programs/lscsoft/libmetaio/include/
 DEF_LFLAGS = -L ~/bin/lib -lFrame -lfftw3 -lgsl -lgslcblas -lm
 LAL_LFLAGS = -L ~/bin/lib -llal -llalmetaio 
@@ -38,19 +40,11 @@ all: SPINspiral
 exit:
 
 
-mcmc_lal.o: include/mcmc_lal.h
 mcmc_3rdparty.o: include/remez.h
 
 
-
-mcmc_nolal: $(DEF_MCMCOBJ) mcmc_nolal.o
-	$(CC) -o mcmc_nolal $(DEF_MCMCOBJ) mcmc_nolal.o $(DEF_LFLAGS)
-
-mcmc_lal: $(DEF_MCMCOBJ) mcmc_lal.o
-	$(CC) -o mcmc_lal $(DEF_MCMCOBJ) mcmc_lal.o $(DEF_LFLAGS) $(LAL_LFLAGS)
-
-SPINspiral: $(DEF_MCMCOBJ) mcmc_lal.o
-	$(CC) -o SPINspiral $(DEF_MCMCOBJ) mcmc_lal.o $(DEF_LFLAGS) $(LAL_LFLAGS)
+SPINspiral: $(DEF_MCMCOBJ)
+	$(CC) -o SPINspiral $(DEF_MCMCOBJ) $(DEF_LFLAGS) $(LAL_LFLAGS)
 
 
 
@@ -59,7 +53,7 @@ clean:
 	rm -f *.o include/*.gch
 
 cleanbin:
-	rm -f mcmc 
+	rm -f SPINspiral
 
 cleanoutput:
 	rm -f mcmc.output.??????.?? *-signal*.dat
