@@ -21,11 +21,11 @@ CFLAGS = -static -O3 -ipa -I/home/vivien/opt/lscsoft/non-lsc/include -I/home/viv
 #MCMCLFLAGS = -static -ipa -L ~/bin/lib -llal -lFrame -lfftw3 -lgsl -lgslcblas -lm
 MCMCLFLAGS = -static -ipa -L/home/vivien/head/opt/lscsoft/lal/lib -llal -L/export/apps/gsl-1.11/lib/ -lgsl -lgslcblas -L/home/vivien/opt/lscsoft/non-lsc/lib -lfftw3 -lfftw3f -lm -L ~/bin/lib -lFrame
 #-L/share/apps/fftw/lib/ -lfftw3
-MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o mcmc_lal.o #LALinterface.o
+MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o mcmc_lal.o
 
 #WAVELFLAGS = -lfftw3
 WAVELFLAGS = -static -ipa -L ~/bin/lib -lFrame -lfftw3 -lgsl -lgslcblas -lm
-WAVEOBJ = waveform_main.o mcmc_templates.o mcmc_routines.o waveform_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o LALinterface.o
+WAVEOBJ = waveform_main.o mcmc_templates.o mcmc_routines.o waveform_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o mcmc_lal.o
 
 
 
