@@ -21,7 +21,7 @@ CFLAGS = -O3
 
 
 
-MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_3rdparty.o 
+MCMCOBJ = mcmc_main.o mcmc_mcmc.o mcmc_templates.o mcmc_routines.o mcmc_data.o mcmc_parameters.o mcmc_signal.o mcmc_lal.o mcmc_3rdparty.o 
 DEF_CFLAGS = -I/usr/include -I./include -I ~/bin/include   -I /opt/lscsoft/lal/include -I /opt/lscsoft/libmetaio/include  -I /opt/lscsoft/libframe/include
 DEF_LFLAGS = -L/opt/lscsoft/libframe/lib64 -lFrame -lfftw3 -lfftw3f -lgsl -lgslcblas -lm  		
 LAL_LFLAGS = -L /opt/lscsoft/lal/lib64/ -llal -llalmetaio
@@ -32,7 +32,6 @@ LAL_LFLAGS = -L /opt/lscsoft/lal/lib64/ -llal -llalmetaio
 %.o: %.c Makefile include/mcmc.h
 	$(CC) $(CFLAGS) $(DEF_CFLAGS) -c $<
 
-#all: mcmc_nolal mcmc_lal SPINspiral
 all: SPINspiral
 
 exit: 
@@ -40,19 +39,12 @@ exit:
 
 
 
-mcmc_lal.o: include/mcmc_lal.h
 mcmc_3rdparty.o: include/remez.h
 
 
 
-mcmc_nolal: $(MCMCOBJ) mcmc_nolal.o
-	$(CC) -o mcmc_nolal $(MCMCOBJ) mcmc_nolal.o $(DEF_LFLAGS)
-
-mcmc_lal: $(MCMCOBJ) mcmc_lal.o
-	$(CC) -o mcmc_lal $(MCMCOBJ) mcmc_lal.o $(LAL_LFLAGS) $(DEF_LFLAGS)
-
-SPINspiral: $(MCMCOBJ) mcmc_lal.o
-	$(CC) -o SPINspiral $(MCMCOBJ) mcmc_lal.o $(LAL_LFLAGS) $(DEF_LFLAGS)
+SPINspiral: $(MCMCOBJ)
+	$(CC) -o SPINspiral $(MCMCOBJ) $(LAL_LFLAGS) $(DEF_LFLAGS)
 
 
 
@@ -60,7 +52,7 @@ clean:
 	rm -f *.o include/*.gch
 
 cleanbin:
-	rm -f mcmc_nolal mcmc_lal SPINspiral
+	rm -f SPINspiral
 
 cleanoutput:
 	rm -f mcmc.output.??????.?? *-signal*.dat
